--- a/app/src/main/res/layout/activity_cover.xml
+++ b/app/src/main/res/layout/activity_cover.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="164dp"
-        android:text="Cake Shop"
+        android:text="@string/titleCoverScreenTextView"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="36sp"
         android:textStyle="bold|italic"
