--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="246dp"
         android:layout_marginRight="246dp"
-        android:text="Total amount"
+        android:text="@string/PaymentScreenTotalAmountTextView"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,8 @@
         android:layout_marginEnd="186dp"
         android:layout_marginRight="186dp"
         android:ems="10"
-        android:inputType="number"
+        android:inputType="@string/paymentScreenTotalAmountEditText"
+        android:text="@string/paymentScreenTotalAmountEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/total_amount" />
@@ -50,7 +51,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="246dp"
         android:layout_marginRight="246dp"
-        android:text="Payment type"
+        android:text="@string/paymentScreenPaymentTypeTextView"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Visa Card"
+        android:text="@string/paymentScreenVisaCardButton"
         app:layout_constraintEnd_toStartOf="@+id/master_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/payment_type" />
@@ -70,7 +71,7 @@
         android:id="@+id/master_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MasterCard"
+        android:text="@string/PaymentScreenMasterCardButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/visa_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/visa_btn" />
@@ -82,7 +83,7 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Cardholder Name"
+        android:text="@string/PaymentScreenCardholderNameEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/visa_btn" />
@@ -94,7 +95,7 @@
         android:layout_marginTop="32dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Card number"
+        android:text="@string/PaymentScreenCardNumberEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardholder_text" />
@@ -106,7 +107,7 @@
         android:layout_marginTop="36dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Valid until"
+        android:text="@string/PaymentScreenValidUntilEditText"
         app:layout_constraintEnd_toStartOf="@+id/cvv_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardnumber_text" />
@@ -118,7 +119,7 @@
         android:layout_marginTop="36dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="CVV"
+        android:text="@string/PaymentScreenCvvEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/valid_text"
         app:layout_constraintTop_toBottomOf="@+id/cardnumber_text" />
@@ -128,7 +129,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="Pay"
+        android:text="@string/PaymentScreenPayEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/valid_text" />
