--- a/app/src/main/res/layout/item_list_item.xml
+++ b/app/src/main/res/layout/item_list_item.xml
@@ -6,11 +6,12 @@
     android:layout_height="200dp">
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/list_item_image"
         android:layout_width="200dp"
         android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cupcake_logo"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <TextView
@@ -21,6 +22,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="TextView"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,6 +34,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="TextView"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
