--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ItemDescriptionAddToCartButton">Add to cart</style>
+
+    <style name="LoginScreenLoginButton">Login</style>
+
+    <style name="LoginEntryScreenRegisterButton">Register</style>
+
+    <style name="LoginEntryScreenLoginButton">Login</style>
+
 </resources>
