--- a/app/src/main/res/layout/item_list_item.xml
+++ b/app/src/main/res/layout/item_list_item.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:id="@+id/list_item_image"
-        android:layout_width="200dp"
+        android:layout_width="180dp"
         android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -16,14 +16,15 @@
 
     <TextView
         android:id="@+id/item_name"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
+        android:gravity="center"
+        android:maxLines="3"
         android:text="TextView"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/list_item_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -31,10 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:text="TextView"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/list_item_image"
         app:layout_constraintTop_toBottomOf="@+id/item_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
