--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sugar1"
     tools:context=".DescriptionActivity">
 
     <ImageView
@@ -67,7 +68,7 @@
         style="@style/ItemDescriptionAddToCartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="Add to cart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
