--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/sugar1"
     tools:context=".ShoppingCartActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -36,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="monospace"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/ShoppinCartScreenContinueShoppingButton"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
