--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -22,6 +22,7 @@
         android:id="@+id/mapView"
         android:layout_width="0dp"
         android:layout_height="410dp"
+        android:background="@drawable/locateshopmap"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
