--- a/app/src/main/res/layout/activity_login_entry.xml
+++ b/app/src/main/res/layout/activity_login_entry.xml
@@ -26,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar3"
-        app:srcCompat="@drawable/cupcake_logo" />
+        app:srcCompat="@drawable/logo2" />
 
     <TextView
         android:id="@+id/login_text"
@@ -41,10 +41,15 @@
 
     <TextView
         android:id="@+id/login_first_text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:autoText="false"
+        android:gravity="center"
         android:text="@string/LoginEntryScreenQuestionTextView"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
