--- a/app/src/main/res/layout/activity_tracking_maps.xml
+++ b/app/src/main/res/layout/activity_tracking_maps.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TrackingActivity">
+    tools:context=".TrackingMapsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar9"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="95dp"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
@@ -18,15 +18,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView2"
-        android:layout_width="410dp"
-        android:layout_height="360dp"
-        android:background="@drawable/trackingmap"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar9" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:context=".TrackingMapsActivity" />
 
     <TextView
         android:id="@+id/textView"
@@ -48,7 +49,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mapView2" />
+        app:layout_constraintTop_toBottomOf="@+id/map" />
 
     <ImageView
         android:id="@+id/imageView12"
@@ -58,6 +59,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/trackingsign" />
+        android:src="@drawable/trackingsign" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
